--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
+    "angular-fusioncharts": "^4.0.0",
+    "chart.js": "^3.9.1",
+    "fusioncharts": "^3.19.0",
     "ionicons": "^6.0.3",
+    "react-flexmonster": "^2.9.37",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
