First Review Com

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
+    "@swimlane/ngx-datatable": "^20.1.0",
+    "@syncfusion/ej2-ng-charts": "^16.2.50",
     "angular-fusioncharts": "^4.0.0",
     "chart.js": "^3.9.1",
     "fusioncharts": "^3.19.0",
